--- a/index.html
+++ b/index.html
@@ -2,8 +2,26 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>轮播图</title>
+		<link rel="stylesheet" type="text/css" href="css/index.css"/>
 	</head>
 	<body>
+		<div id="box">
+			<section class="prev">前一张</section>
+			<section class="next">后一张</section>
+			<!--ul>(li>img[src="images/$.jpg" alt="轮播图片"])*7-->
+			<ul>
+				<li><img src="images/1.jpg" alt="轮播图片" /></li>
+				<li><img src="images/2.jpg" alt="轮播图片" /></li>
+				<li><img src="images/3.jpg" alt="轮播图片" /></li>
+				<li><img src="images/4.jpg" alt="轮播图片" /></li>
+				<li><img src="images/5.jpg" alt="轮播图片" /></li>
+				<li><img src="images/6.jpg" alt="轮播图片" /></li>
+				<li><img src="images/7.jpg" alt="轮播图片" /></li>
+			</ul>
+		</div>
 	</body>
 </html>
+<script src="libs/jquery-3.1.1.js"></script>
+<script src="js/index.js" type="text/javascript"></script>
+
