--- a/index.html
+++ b/index.html
@@ -3,12 +3,50 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>轮播图</title>
-		<link rel="stylesheet" type="text/css" href="css/index.css"/>
+		<link rel="stylesheet" type="text/css" href="css/jquery.zyslide.css"/>
+		<style type="text/css">
+			body{
+				background-color: black;
+				color: white;
+			}
+		</style>
+	
 	</head>
 	<body>
-		<div id="box">
-			<section class="prev">前一张</section>
-			<section class="next">后一张</section>
+		<!--第一个轮播图-->
+		<div class="slide zy-slide">
+			<section class="zy-prev">前一张</section>
+			<section class="zy-next">后一张</section>
+			<!--ul>(li>img[src="images/$.jpg" alt="轮播图片"])*7-->
+			<ul>
+				<li><img src="images/1.jpg" alt="轮播图片" /></li>
+				<li><img src="images/2.jpg" alt="轮播图片" /></li>
+				<li><img src="images/3.jpg" alt="轮播图片" /></li>
+				<li><img src="images/4.jpg" alt="轮播图片" /></li>
+				<li><img src="images/5.jpg" alt="轮播图片" /></li>
+				<li><img src="images/6.jpg" alt="轮播图片" /></li>
+				<li><img src="images/7.jpg" alt="轮播图片" /></li>
+			</ul>
+		</div>
+		<!--第二个轮播图-->
+		<div class="slide zy-slide">
+			<section class="zy-prev">前一张</section>
+			<section class="zy-next">后一张</section>
+			<!--ul>(li>img[src="images/$.jpg" alt="轮播图片"])*7-->
+			<ul>
+				<li><img src="images/1.jpg" alt="轮播图片" /></li>
+				<li><img src="images/2.jpg" alt="轮播图片" /></li>
+				<li><img src="images/3.jpg" alt="轮播图片" /></li>
+				<li><img src="images/4.jpg" alt="轮播图片" /></li>
+				<li><img src="images/5.jpg" alt="轮播图片" /></li>
+				<li><img src="images/6.jpg" alt="轮播图片" /></li>
+				<li><img src="images/7.jpg" alt="轮播图片" /></li>
+			</ul>
+		</div>
+		<!--第三个轮播图-->
+		<div class="slide zy-slide" id="slide">
+			<section class="zy-prev">前一张</section>
+			<section class="zy-next">后一张</section>
 			<!--ul>(li>img[src="images/$.jpg" alt="轮播图片"])*7-->
 			<ul>
 				<li><img src="images/1.jpg" alt="轮播图片" /></li>
@@ -23,5 +61,5 @@
 	</body>
 </html>
 <script src="libs/jquery-3.1.1.js"></script>
-<script src="js/index.js" type="text/javascript"></script>
-
+<script src="js/jquery.zyslide.js" type="text/javascript"></script>
+<script src="index.js"></script>
