带参数的插件封装完

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			</ul>
 		</div>
 		<!--第三个轮播图-->
-		<div class="slide zy-slide" id="slide">
+		<div class="zy-slide" id="slide">
 			<section class="zy-prev">前一张</section>
 			<section class="zy-next">后一张</section>
 			<!--ul>(li>img[src="images/$.jpg" alt="轮播图片"])*7-->
